java 8 stream fix